--- a/LAB_1/ECOM_ADMIN_PANEL/views/layouts/partials/header.ejs
+++ b/LAB_1/ECOM_ADMIN_PANEL/views/layouts/partials/header.ejs
@@ -11,8 +11,7 @@
 
   <ul id="menu" class="menu">
     <li><a href="/">Home</a></li>
-    <li><a href="#">Who we are</a></li>
-    <li><a href="#">Projects</a></li>
+    <li><a href="/products">Products</a></li>
     <li><a href="#">Clients</a></li>
     <li><a href="/restapi">API Demo</a></li>
     <li><a href="/checkout">CheckOut</a></li>
